--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,10 @@
 <h2>RECENTLY ADDED</h2>
 <div>
     <% books.forEach(book => { %>
-        <img src="<%= book.coverImagePath %>" height="150" width="100">
+        <a href="/books/<%= book.id  %>">
+            <img src="<%= book.coverImagePath %>" height="150" width="100">
+
+        </a>
     <%}); %>
 
 </div>
