--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -1,12 +1,12 @@
 <div>
     <label for="title">Title</label>
-    <input type="text" name="title"><%=book.title%> <!--<= in percent> make this as html output -->
+    <input type="text" name="title" value="<%=book.title%>"> <!--<= in percent> make this as html output -->
 </div>
 <div>
     <label for="">Author</label>
     <select name="author" id="">
         <% authors.forEach(author => {  %>
-            <% if (author.id=== book.author){ %>
+            <% if (`${author.id}` === `${book.author}`){ %>
                 <option selected label="<%= author.name %>" value="<%= author.id%>">
             <% } else { %>
                 <option label="<%= author.name %>" value="<%= author.id%>">
@@ -22,11 +22,11 @@
 <div>
     <label for="">Page Count</label>
     <input type="number" name="pageCount" id="" min="1"
-           value="<%= book.publishDate == null?"":book.pageCount %>">
+           value="<%= book.publishDate == null?"":book.pageNumber %>">
 </div>
 <div>
     <label for="">Cover</label>
-    <input type="file" name="cover" class="filepond"> 
+    <input type="file" name="cover" class="filepond" value="<%= book.coverImagePath %>"> 
 </div>
 <div>
     <label for="">Description</label>
