--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -21,6 +21,8 @@ all Book list
 
 <div>
     <% books.forEach(book => { %>
-        <img src="<%= book.coverImagePath %>" width="100" height="150">
+        <a href="/books/<%= book.id %>">
+            <img src="<%= book.coverImagePath %>" width="100" height="150">
+        </a>
     <%}); %>
 </div>
