--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -10,12 +10,17 @@ all authors list
 <br>
 
 <% authors.forEach(author => { %>
+    
     <div><%= author.name %></div>
-    <a href="/authors/<%= author.id %>">View</a>
-    <a href="/authors/<%= author.id %>/edit">Edit</a>
-    <!-- <form action="/authors/<%= author.id %>?_method=DELETE" method="POST">
-        <button type="submit">Delete</button>
-    </form> _method where we defined it on server.js -->
-
-    <%- include('../partials/deleteForm',{url:`/authors/${author.id}`})  %>
+    <div class="btn-row">
+        <a class="btn btn-primary" href="/authors/<%= author.id %>">View</a>
+        <a class="btn btn-primary" href="/authors/<%= author.id %>/edit">Edit</a>
+    
+        <!-- <form action="/authors/<%= author.id %>?_method=DELETE" method="POST">
+            <button type="submit">Delete</button>
+        </form> _method where we defined it on server.js -->
+    
+        <%- include('../partials/deleteForm',{url:`/authors/${author.id}`})  %>
+    
+    </div>
 <%}); %>
