--- a/views/partials/deleteForm.ejs
+++ b/views/partials/deleteForm.ejs
@@ -1,4 +1,4 @@
 
 <form action="<%= url %>?_method=DELETE" method="POST">
-    <button type="submit">Delete</button>
+    <button class="btn btn-danger" type="submit">Delete</button>
 </form> <!-- _method where we defined it on server.js-->
