ADDING MORE CSS

--- a/views/authors/_form_fields.ejs
+++ b/views/authors/_form_fields.ejs
@@ -1,2 +1,6 @@
-<label for="name">Name</label>
-<input type="text" name="name" value="<%=author.name%>"> <!--<= in percent> make this as html output -->
+<div class="form-row">
+    <div class="form-item">
+        <label for="name">Name</label>
+        <input type="text" name="name" value="<%=author.name%>"> <!--<= in percent> make this as html output -->
+    </div>
+</div>
