--- a/views/authors/edit.ejs
+++ b/views/authors/edit.ejs
@@ -2,6 +2,10 @@
 
  <form action="/authors/<%= author.id %>?_method=PUT" method="POST"> <!--//this action go to post method on author routes -->
     <%- include('_form_fields.ejs')  %> <!--<- in percent> make this as file output -->
-    <a href="/authors/<%= author.id %>">Cancel</a>
-    <button type="submit">Update</button>
+    
+    <div class="form-row form-row-end btn-end">
+        <a class="btn btn-danger" href="/authors/<%= author.id %>">Cancel</a>
+        <button class="btn btn-primary" type="submit">Update</button>
+        
+    </div>
 </form>
