--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -2,6 +2,9 @@
 
  <form action="/authors" method="POST"> <!--//this action go to post method on author routes -->
     <%- include('_form_fields.ejs')  %> <!--<- in percent> make this as file output -->
-    <a href="/authors">Cancel</a>
-    <button type="submit">Create</button>
+    <div class="form-row form-row-end btn-end">
+        <a class="btn btn-danger" href="/authors">Cancel</a>
+        <button class="btn btn-primary" type="submit">Create</button>
+        
+    </div>
 </form>
