--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -1,6 +1,10 @@
 <h2><%= author.name %></h2>
-<a href="/authors/<%= author.id %>/edit">Edit</a>
-<%- include('../partials/deleteForm',{url:`/authors/${author.id}`})%>
+
+<div class="btn-row">
+    <a class="btn btn-primary" href="/authors/<%= author.id %>/edit">Edit</a>
+    <%- include('../partials/deleteForm',{url:`/authors/${author.id}`})%>
+
+</div>
 
 <!-- <% console.log(bookByAuthor)%> -->
 <% if(bookByAuthor.length>0){ %>
