--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,19 +1,26 @@
 <form action="/books" method="get">
     
     <h2>Search Books</h2>
-    <div>
-        <label for="">Title</label>
-        <input type="text"  name="title" value="<%= searchOptions.title %>">
+    <div class="form-row">
+        <div class="form-item">
+            <label for="">Title</label>
+            <input type="text"  name="title" value="<%= searchOptions.title %>">
+        </div>
     </div>
-    <div>
-        <label for="">Published After</label>
-        <input type="date"  name="publishedAfter" value="<%= searchOptions.publishedAfter %>">
+    <div class="form-row">
+        <div class="form-item">
+            <label for="">Published After</label>
+            <input type="date"  name="publishedAfter" value="<%= searchOptions.publishedAfter %>">
+        </div>
+        <div class="form-item">
+            <label for="">Published Before</label>
+            <input type="date"  name="publishedBefore" value="<%= searchOptions.publishedBefore %>">
+        </div>
     </div>
-    <div>
-        <label for="">Published Before</label>
-        <input type="date"  name="publishedBefore" value="<%= searchOptions.publishedBefore %>">
+    <div class="form-row form-row-end"> 
+        <button class="btn btn-primary" type="submit">Search</button>
+
     </div>
-    <button type="submit">Search</button>
 </form>
 <br>
 
