--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -3,6 +3,8 @@
  <!--<form action="/books" method="POST" enctype="multipart/form-data"> //this action go to post method on author routes and  enctype="multipart/form-data" is sending multpart form instead of single string--> 
  <form action="/books" method="POST"> <!--//this action is sending of single string which of json object--> 
     <%- include('_form_fields.ejs')  %> <!--<- in percent> make this as file output -->
-    <a href="/books">Cancel</a>
-    <button type="submit">Create</button>
+    <div class="form-row form-row-end btn-row">
+        <a class="btn btn-danger" href="/books">Cancel</a>
+        <button class="btn btn-primary" type="submit">Create</button>
+    </div>
 </form>
