finished and can continue

--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -29,7 +29,7 @@
     <div class="form-row">
         <div class="form-item form-item-no-grow">
             <label for="">Cover</label>
-            <input type="file" name="cover" class="filepond" value="<%= book.coverImagePath %>"> 
+            <input type="file" name="cover" class="book-cover filepond" value="<%= book.coverImagePath %>"> 
         </div>
         <div class="form-item">
             <label for="">Description</label>
