--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,4 @@
 <h2>RECENTLY ADDED</h2>
 <div>
-    <% books.forEach(book => { %>
-        <a href="/books/<%= book.id  %>">
-            <img src="<%= book.coverImagePath %>" height="150" width="100">
-
-        </a>
-    <%}); %>
-
+    <%- include('partials/bookGrid.ejs',{books:books,large:true})  %>
 </div>
