--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -18,16 +18,19 @@ all authors list
 
 <% authors.forEach(author => { %>
     
-    <div><%= author.name %></div>
-    <div class="btn-row">
-        <a class="btn btn-primary" href="/authors/<%= author.id %>">View</a>
-        <a class="btn btn-primary" href="/authors/<%= author.id %>/edit">Edit</a>
-    
-        <!-- <form action="/authors/<%= author.id %>?_method=DELETE" method="POST">
-            <button type="submit">Delete</button>
-        </form> _method where we defined it on server.js -->
-    
-        <%- include('../partials/deleteForm',{url:`/authors/${author.id}`})  %>
-    
+    <div class="author-row">
+        <div class="author-name"><%= author.name %></div>
+        <div class="btn-row">
+            <a class="btn btn-primary" href="/authors/<%= author.id %>">View</a>
+            <a class="btn btn-primary" href="/authors/<%= author.id %>/edit">Edit</a>
+        
+            <!-- <form action="/authors/<%= author.id %>?_method=DELETE" method="POST">
+                <button type="submit">Delete</button>
+            </form> _method where we defined it on server.js -->
+        
+            <%- include('../partials/deleteForm',{url:`/authors/${author.id}`})  %>
+        
+        </div>
+
     </div>
 <%}); %>
