--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -9,10 +9,5 @@
 <!-- <% console.log(bookByAuthor)%> -->
 <% if(bookByAuthor.length>0){ %>
     <h2>Books By Author</h2>
-    <% bookByAuthor.forEach(book => { %>
-        <a href="/books/<%= book.id  %>">
-            <img src="<%= book.coverImagePath %>" width="100" height="150">
-
-        </a>
-    <%}); %>
+    <%- include('../partials/bookGrid.ejs',{books:bookByAuthor})  %>
 <% } %>
