--- a/views/partials/errorMessage.ejs
+++ b/views/partials/errorMessage.ejs
@@ -1,3 +1,6 @@
 <% if (locals.errorMessage != null) { %>
+    <div class="error-message">
         <%= errorMessage %>
-    <% }%> 
+
+    </div>
+<% }%> 
