--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,4 +1,4 @@
-<h2>new authors</h2>
+<h2>New Authors</h2>
 
  <form action="/authors" method="POST"> <!--//this action go to post method on author routes -->
     <%- include('_form_fields.ejs')  %> <!--<- in percent> make this as file output -->
